Bug 1828373: Create accs for elements with overflow:scroll and overflow:auto styling r=nlapre,Jamie

Differential Revision: https://phabricator.services.mozilla.com/D176202